# ts-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  seasonal_test_data.csv  stats_report.json  test_data.csv
.claude/: settings.local.json
benches/: algorithmic_benchmarks.rs  statistical_benchmarks.rs
docs/: PLUGIN_DEVELOPMENT.md  performance.md
docs/educational/: timeseries_primer.md
docs/examples/: README.md
docs/examples/financial/: stock_analysis.md
docs/examples/iot/: industrial_sensors.md
docs/ml/: README.md  automl_guide.md  embeddings_guide.md  interpretability_guide.md  lstm_gru_guide.md  online_learning_guide.md  transformer_guide.md
docs/performance/: caching.md  memory.md  parallel.md
docs/quality/: README.md  architecture.md  cli_guide.md  troubleshooting.md
docs/quality/examples/: basic_assessment.md
docs/references/: bibliography.md
docs/technical/: algorithms.md  api_documentation.md
docs/testing/: comprehensive_testing_guide.md
docs/user/: command_reference.md  faq.md  installation.md  troubleshooting.md  tutorial.md
src/: analysis.rs  import.rs  lib.rs  main.rs  preprocessing.rs  timeseries.rs  types.rs  validation.rs
src/anomaly/: advanced.rs  contextual.rs  mod.rs  scoring.rs  statistical.rs  streaming.rs  timeseries.rs  utils.rs
src/cli/: commands.rs  help.rs  interactive.rs  mod.rs  tests.rs
src/config/: defaults.rs  loader.rs  mod.rs  validation.rs
src/correlation/: basic.rs  cointegration.rs  cross_correlation.rs  dtw.rs  granger.rs  mod.rs  pca.rs  rolling.rs
src/forecasting/: advanced.rs  arima.rs  classical.rs  ensemble.rs  evaluation.rs  features.rs  mod.rs
src/ml/: activations.rs  embeddings.rs  ensemble.rs  interfaces.rs  interpretability.rs  mod.rs  online_learning.rs  persistence.rs  recurrent.rs  tensor.rs  transformer.rs  types.rs
src/ml/automl/: early_stopping.rs  hyperparameter.rs  meta_learning.rs  mod.rs  multi_objective.rs  nas.rs  selection.rs  types.rs
src/ml/embeddings/: clustering.rs  mod.rs  pattern.rs  similarity.rs
src/performance/: cache.rs  database.rs  memory.rs  mod.rs  parallel.rs  progress.rs
src/plotting/: correlation.rs  decomposition.rs  engine.rs  export.rs  mod.rs  statistical.rs  styling.rs  timeseries.rs  types.rs
src/plugins/: analysis.rs  data_source.rs  loader.rs  management.rs  mod.rs  registry.rs  tests.rs  visualization.rs
src/quality/: cleaning.rs  config.rs  errors.rs  mod.rs  monitoring.rs  outlier_detection.rs  profiling.rs  scoring.rs  types.rs
src/reporting/: batch.rs  engine.rs  export.rs  insights.rs  mod.rs  types.rs
src/reporting/templates/: data_quality.rs  executive.rs  forecasting.rs  mod.rs  technical.rs
src/seasonality/: adjustment.rs  advanced.rs  calendar.rs  detection.rs  mod.rs  patterns.rs
src/stats/: changepoint.rs  descriptive.rs  distribution.rs  export.rs  mod.rs  stationarity.rs  timeseries.rs
src/trend/: analysis.rs  decomposition.rs  detection.rs  detrending.rs  mod.rs  plotting.rs
tests/: automl_tests.rs  cache_tests.rs  database_tests.rs  interpretability_tests.rs  memory_tests.rs  mod.rs  parallel_tests.rs  performance_integration_tests.rs  progress_tests.rs
tests/data/: mod.rs  synthetic_generators.rs
tests/integration/: cli_workflows.rs  mod.rs  quality_pipeline.rs
tests/property_based/: mod.rs  statistical_properties.proptest-regressions  statistical_properties.rs
tests/statistical_validation/: mod.rs  reference_datasets.rs
tests/unit/: mathematical_functions.rs  mod.rs
