[package]
name = "chronos"
version = "0.1.0"
edition = "2021"
description = "A powerful CLI tool and library for time series data analysis, visualization, and statistical computation"
authors = ["Chronos Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jpequegn/ts-rs"
keywords = ["time-series", "analysis", "statistics", "data", "cli"]
categories = ["command-line-utilities", "data-structures", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chronos"
path = "src/main.rs"

[lib]
name = "chronos"
path = "src/lib.rs"

[dependencies]
# CLI argument parsing
clap = { version = "3.2", features = ["derive"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"

# Date and time handling
chrono = { version = "0.4.26", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Statistical functions
statrs = "0.15"

# Precise decimal calculations
rust_decimal = "1.26"

# Terminal output
colored = "2.0"

# Numerical arrays
ndarray = "0.15"

# High-performance data processing (future enhancement - requires newer Rust)
# polars = { version = "0.32", features = ["lazy", "temporal", "csv", "json", "parquet", "serde"] }

# Regular expressions for pattern matching (compatible version)
regex = "1.3"

# Additional string processing (compatible version)
unicode-segmentation = "1.6"

# Path handling
walkdir = "2.3"

# Parallel processing
rayon = "1.7"

# Directory utilities for interactive mode
dirs = "5.0"

[dev-dependencies]
# Temporary files for testing
tempfile = "3.0"

# Random number generation for tests
rand = "0.8"
