[package]
name = "chronos"
version = "0.1.0"
edition = "2021"
description = "A powerful CLI tool and library for time series data analysis, visualization, and statistical computation"
authors = ["Chronos Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jpequegn/ts-rs"
keywords = ["time-series", "analysis", "statistics", "data", "cli"]
categories = ["command-line-utilities", "data-structures", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chronos"
path = "src/main.rs"

[lib]
name = "chronos"
path = "src/lib.rs"

[features]
default = []
ml = ["tch"]
ml-full = ["ml"]

[dependencies]
# CLI argument parsing
clap = { version = "3.2", features = ["derive"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"

# Date and time handling
chrono = { version = "0.4.26", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Statistical functions
statrs = "0.15"

# Precise decimal calculations
rust_decimal = "1.26"

# Terminal output
colored = "2.0"

# Numerical arrays
ndarray = "0.15"

# High-performance data processing (future enhancement - requires newer Rust)
# polars = { version = "0.32", features = ["lazy", "temporal", "csv", "json", "parquet", "serde"] }

# Regular expressions for pattern matching (compatible version)
regex = "1.3"

# Additional string processing (compatible version)
unicode-segmentation = "1.6"

# Path handling
walkdir = "2.3"

# Parallel processing
rayon = "1.7"

# Performance optimizations
memmap2 = "0.9"
lz4 = "1.24"
dashmap = "5.5"

# Database support
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# Progress indicators
indicatif = "0.17"

# Directory utilities for interactive mode
dirs = "5.0"

# Random number generation for Isolation Forest
rand = "0.8"
fastrand = "2.0"

# Data visualization and plotting
plotly = { version = "0.8", features = ["plotly_ndarray", "kaleido"] }

# Configuration management
toml = "0.8"
serde_yaml = "0.9"
merge = "0.2"
figment = { version = "0.10", features = ["toml", "yaml", "json", "env"] }

# Binary serialization
bincode = "1.3"

# Machine Learning dependencies
candle-core = "0.9"
candle-nn = "0.9"
tch = { version = "0.20", optional = true }

# AutoML dependencies
num_cpus = "1.0"
libm = "0.2"

[dev-dependencies]
# Temporary files for testing
tempfile = "3.0"

# Property-based testing
proptest = "1.0"
quickcheck = "1.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Statistical validation and comparison
approx = "0.5"

# Test utilities
serial_test = "3.0"
test-case = "3.0"

# Mock and test doubles
mockall = "0.11"

# Async runtime for tests
tokio = { version = "1.0", features = ["rt", "macros"] }

[[bench]]
name = "statistical_benchmarks"
harness = false

[[bench]]
name = "algorithmic_benchmarks"
harness = false

